# evt3

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  RELEASING.md  install.sh
.github/workflows/: ci.yml  release.yml
benchmarks/: README.md  benchmark.py
cpp_reference/: evt3_decoder
evt3-cli/: Cargo.toml
evt3-cli/src/: main.rs
evt3-core/: Cargo.toml
evt3-core/benches/: decode_benchmark.rs
evt3-core/src/: decoder.rs  lib.rs  output.rs  parser.rs  types.rs
evt3-core/tests/: integration_tests.rs
evt3-python/: Cargo.toml  README.md  pyproject.toml
evt3-python/src/: lib.rs
evt3-python/tests/: conftest.py  test_evt3.py
tests/: integration_test.sh
