[package]
name = "evt3-core"
version = "0.1.0"
edition = "2021"
authors = ["Uthmann <muthmann@users.noreply.github.com>"]
license = "MIT"
description = "Core EVT 3.0 decoder library for Prophesee event cameras"
readme = "../README.md"
repository = "https://github.com/muthmann/evt3"
keywords = ["event-camera", "evt3", "prophesee", "decoder", "neuromorphic"]
categories = ["parser-implementations", "encoding", "science"]

[dependencies]
thiserror = "1.0"
byteorder = "1.5"

[dev-dependencies]
tempfile = "3.10"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "decode_benchmark"
harness = false
