[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "evt3"
version = "0.1.0"
description = "High-performance EVT 3.0 decoder for Prophesee event cameras"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Uthmann", email = "mika.uthmann@uni-bielefeld.de" }]
requires-python = ">=3.8"
keywords = ["event-camera", "evt3", "prophesee", "decoder", "neuromorphic", "dvs"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Multimedia :: Video",
]
dependencies = [
    "numpy>=1.20",
]

[project.urls]
Homepage = "https://github.com/muthmann/evt3"
Repository = "https://github.com/muthmann/evt3"
Documentation = "https://github.com/muthmann/evt3#readme"
"Bug Tracker" = "https://github.com/muthmann/evt3/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "maturin>=1.4",
    "pandas>=1.3",
]

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "python"
module-name = "evt3._evt3"
strip = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0",
    "maturin>=1.4",
    "pandas>=1.3",
]
